@@ -72,6 +72,7 @@ gm_sources = [
   "$_gm/circulararcs.cpp",
   "$_gm/circularclips.cpp",
   "$_gm/clip_error.cpp",
+  "$_gm/clip_sierpinski_region.cpp",
   "$_gm/clip_strokerect.cpp",
   "$_gm/clipdrawdraw.cpp",
   "$_gm/clippedbitmapshaders.cpp",
