@@ -110,6 +110,7 @@ public:
         @return   SkMatrix with translation
     */
     static SkMatrix SK_WARN_UNUSED_RESULT MakeTrans(SkVector t) { return MakeTrans(t.x(), t.y()); }
+    static SkMatrix SK_WARN_UNUSED_RESULT MakeTrans(SkIVector t) { return MakeTrans(t.x(), t.y()); }
 
     /** Sets SkMatrix to:
 
